# flower

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  create-release.yml  create-tag.yml  docker-nginx.yml  docker-psql.yml  docker.yml  parse-info.yml  release.yml
scripts/: install.sh  nginx.sh  test-local.sh  test-public.sh
src/: config.rs  error.rs  main.rs
src/api/: handlers.rs  responses.rs  routes.rs
src/db/: connection.rs  mod.rs  queries.rs
src/models/: mod.rs  post.rs  postmeta.rs  term.rs  term_relationship.rs  term_taxonomy.rs
