[package]
name = "flower"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "1.1", features = [ "sqlx-mysql", "runtime-async-std-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.43", default-features = false, features = ["rt-multi-thread", "fs"] }
uuid = { version = "1.12", features = ["v4"] }
actix-web = "4"
actix-cors = "0.7"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0.71"
thiserror = "2.0"
config = "0.15"
dotenv = "0.15"
url = "2.5"
futures = "0.3"
async-trait = "0.1"
derive_more = "2.0"
slug = "0.1"
